k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boilerplate
  labels:
    app.kubernetes.io/name: boilerplate
