k8s/base/deployment-audit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
  namespace: boilerplate
  labels:
    app: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
  template:
    metadata:
      labels:
        app: audit
    spec:
      containers:
        - name: audit
          image: boilerplate-services-audit:latest
---
apiVersion: v1
kind: Service
metadata:
  name: audit
  namespace: boilerplate
spec:
  selector:
    app: audit
  ports:
    - port: 8080
      targetPort: 8080
