k8s/base/deployment-diagnostics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagnostics
  namespace: boilerplate
  labels:
    app: diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diagnostics
  template:
    metadata:
      labels:
        app: diagnostics
    spec:
      containers:
        - name: diagnostics
          image: boilerplate-diagnostics-webapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: diagnostics
  namespace: boilerplate
spec:
  selector:
    app: diagnostics
  ports:
    - port: 8080
      targetPort: 8080
