k8s/base/deployment-event-logs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-logs
  namespace: boilerplate
  labels:
    app: event-logs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-logs
  template:
    metadata:
      labels:
        app: event-logs
    spec:
      containers:
        - name: event-logs
          image: boilerplate-services-event-logs:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-logs
  namespace: boilerplate
spec:
  selector:
    app: event-logs
  ports:
    - port: 8080
      targetPort: 8080
