k8s/base/deployment-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: boilerplate
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi
          image: boilerplate-authentication-webapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: boilerplate
spec:
  selector:
    app: webapi
  ports:
    - port: 8080
      targetPort: 8080
